objects/CMPL123__Device__c.object
<CustomObject>
    <description>Device</description>
    <fields>
        <fullName>CMPL123__Competitor_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitor Device</description>
        <label>Competitor Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Courier_Tracking_Number__c</fullName>
        <description>The shipment tracking number provided by the courier.</description>
        <label>Courier Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Courier__c</fullName>
        <description>The courier used to deliver the device.</description>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FDX</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Days_Shipped__c</fullName>
        <description>Days Shipped</description>
        <formula>IF(NOT(ISBLANK(CMPL123__Shipped_Date__c)), ROUND((NOW() - CMPL123__Shipped_Date__c), 0), null)</formula>
        <inlineHelpText>No. of days shipped</inlineHelpText>
        <label>Days Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Disposition__c</fullName>
        <description>Current Disposition of the device</description>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>On-Consignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Lot_Number__c</fullName>
        <description>Lot number in which the product was produced.</description>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Manufactured_Date__c</fullName>
        <description>Date the product was manufactured</description>
        <label>Manufactured Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Product_Expiry_Date__c</fullName>
        <description>Expiration date of the product</description>
        <label>Product Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Shipped_Date__c</fullName>
        <description>The date the device was shipped to the account.</description>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Shipped_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account the device was shipped to.</description>
        <label>Shipped to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Sterilization_Number__c</fullName>
        <description>Sterilization Run Number for a medical device product</description>
        <label>Sterilization Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Sterilization_Run_Date__c</fullName>
        <description>Sterilization Run Date</description>
        <inlineHelpText>Sterilization Run Date</inlineHelpText>
        <label>Sterilization Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Sterilization_Run_Number__c</fullName>
        <description>Sterilization Run Number</description>
        <inlineHelpText>Sterilization Run Number</inlineHelpText>
        <label>Sterilization Run Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Unique_Device_Identifier__c</fullName>
        <description>Globally Unique Device Identifier.</description>
        <label>Unique  Device Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Unique_Device_Identifier__c</columns>
        <columns>CMPL123__Product__c</columns>
        <columns>CMPL123__Disposition__c</columns>
        <columns>CMPL123__Manufactured_Date__c</columns>
        <columns>CMPL123__Product_Expiry_Date__c</columns>
        <columns>CMPL123__Shipped_Date__c</columns>
        <columns>CMPL123__Shipped_to_Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>